plugins {
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '2.3.0'
    id 'antlr'
    id 'idea'
}

compileJava.options.encoding = 'utf-8'
compileTestJava.options.encoding = 'utf-8'
java.sourceCompatibility = JavaVersion.VERSION_25

kotlin {
    jvmToolchain(25)
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:33.5.0-jre'
    implementation 'guru.nidi:graphviz-java-all-j2v8:0.18.1'
    implementation 'ch.qos.logback:logback-classic:1.5.32'
    implementation 'org.apache.commons:commons-text:1.15.0'
    antlr 'org.antlr:antlr4:4.13.2'

    testImplementation 'junit:junit:4.13.2'
}

// ANTLR
ext.antlr = [
    destinationDir: 'src/gen/java'
]

generateGrammarSource {
    outputDirectory = file(antlr.destinationDir)
    arguments += ['-visitor', '-encoding', 'utf-8']
}

sourceSets {
    main.java.srcDir antlr.destinationDir
}

idea {
    module.generatedSourceDirs += file(antlr.destinationDir)
}

clean {
    delete antlr.destinationDir
}

compileKotlin {
    dependsOn(generateGrammarSource)
}

compileTestKotlin {
    dependsOn(generateTestGrammarSource)
}
